[[_release_notes]]
= Release Notes
include::include.adoc[]

== 2.2 (tbd)

* `@Stepwise` can be applied to data-driven feature methods, having the effect of executing them sequentially (even if concurrent test mode is active) and to skip subsequent iterations is one iteration fails.

== 2.2-M1 (2022-02-16)

* Add Groovy 4 support https://github.com/spockframework/spock/pull/1382[#1382]

No other changes to the 2.1 release.

Thanks to all the contributors to this release: Marcin Zajączkowski

== 2.1 (2022-02-15)

No functional changes to 2.1-M2.

== Official Spock Logo

image::images/spock-main-logo.png[Spock Logo, align=center, width=20%]

The Spock Framework Project has an official logo.
Many thanks to Ayşe Altınsoy (@AltinsoyAyse) for creating the logo through many iterations.

== Misc
* Documentation fixes
* Build maintenance

Thanks to all the contributors to this release: Marc Philipp, Miles Thomason, BJ Hargrave, Marcin Zajączkowski, Lőrinc Pap, Felipe Pedrosa, Marcin Świerczyński, Benedikt Ritter, Alexander Kriegisch, Jérôme Prinet, Pin Zhang

== 2.1-M2 (2021-11-12)

* Fix issue with generated gradle module metadata that caused issues with consumers.
* Update JUnit, ASM, ByteBuddy dependencies.

== 2.1-M1 (2021-11-12)

=== Highlights

- Add <<utilities.adoc#collection-conditions, collection conditions>> https://github.com/spockframework/spock/issues/1372[#1372]
- Add support for selecting individual iterations via their unique ID (IDE support required). https://github.com/spockframework/spock/pull/1376[#1376]

=== Breaking Changes

- Add `data.` support to conditional extensions https://github.com/spockframework/spock/issues/1360[#1360].
This replaces the  current behavior of accessing data variables without any prefix.
See <<extensions.adoc#precondition_context, Precondition Context>> for more details.

=== Misc

- Add exception translation to JUnit4 Rules https://github.com/spockframework/spock/pull/1342[#1342]