@@ -5,6 +5,8 @@ include::include.adoc[]
 == 2.2 (tbd)
 
 * `@Stepwise` can be applied to data-driven feature methods, having the effect of executing them sequentially (even if concurrent test mode is active) and to skip subsequent iterations is one iteration fails.
+* Multi variable datapipes now support <<data-driven-testing.adoc#multi-data-pipe-named, named deconstruction>>.
+  This might lead to changed behavior results if the data object implements `Map` but supports both positional `getAt(int)` and named `getAt(String)` access. In earlier versions, the positional access was used, but now the named access will be used.
 
 == 2.2-M1 (2022-02-16)
 
